tooling/nargo_cli/tests/snapshots/execution_success/a_7_function/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u32, v1: u32, v2: Field, v3: [u32; 9], v4: [u32; 9]):
    (no terminator instruction)
}
